--- a/coffees.html
+++ b/coffees.html
@@ -32,9 +32,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Intro to coffee</a>
-              <a class="dropdown-item" href="#">Barista SCA</a>
-              <a class="dropdown-item" href="#">Brewing SCA</a>
+              <a class="dropdown-item" href="intro.html">Intro to coffee</a>
+              <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
+              <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
             </div>
           </li>
           <li class="nav-item">
@@ -47,8 +47,58 @@
 
   </header>
 
+  <! --- main beans section --->
+
+  <div class="container main-container">
+    <div class="container headers-landing">
+      <div class="row">
+        <div class="col">
+          <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" width=100% height=auto>
+          <p class="ph-landing">Our Coffees</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <! --- cards for beans section --->
+
+  <div class="container cards-beans">
+    <div class="card-deck">
+      <div class="row">
+
+        <div class="col-12 col-md-6">
+
+          <div class="card">
+            <div class="card-header">
+              <h3>Single Origin</h3>
+            </div>
+            <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
+            <div class="card-body">
+              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
+              <a href="coffees-single.html" class="btn btn-light">Read more</a>
+            </div>
+          </div>
+        </div>
 
 
+
+        <div class="col-12 col-md-6">
+
+          <div class="card">
+            <div class="card-header">
+              <h3>Blends</h3>
+            </div>
+            <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
+            <div class="card-body">
+              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
+              <a href="coffees-blends.html" class="btn btn-light">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
 
 
