--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our Courses</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Intro to coffee</a>
-              <a class="dropdown-item" href="#">Barista SCA</a>
-              <a class="dropdown-item" href="#">Brewing SCA</a>
+              <a class="dropdown-item" href="intro.html">Intro to coffee</a>
+              <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
+              <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
             </div>
           </li>
           <li class="nav-item">
@@ -90,15 +90,15 @@
 
     <! --- beans --->
 
-      <div class="container headers-landing">
-        <div class="row">
-          <div class="col">
-            <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" width=100% height=auto>
-            <p class="ph-landing">Our Coffees</p>
-          </div>
+    <div class="container headers-landing">
+      <div class="row">
+        <div class="col">
+          <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" width=100% height=auto>
+          <p class="ph-landing">Our Coffees</p>
         </div>
       </div>
-    
+    </div>
+
     <! --- cards for beans section --->
 
     <div class="container cards-beans">
@@ -141,6 +141,7 @@
 
 
   <! --- sca courses --->
+
 
   <div class="container headers-landing">
     <div class="row">
