--- a/intro.html
+++ b/intro.html
@@ -44,54 +44,28 @@
             </div>
         </nav>
 
-
     </header>
 
-    <div class="container">
-        <div class="brewing-container">
+
+    <! --- main section --->
+
+    <div class="container main-container">
+        <div class="container main-landing">
             <div class="row">
                 <div class="col">
-                    <h2>The Aeropress</h2>
-                    <hr>
-                    <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
-                    <p>Here’s the method we use ourselves:</p>
-                    <p>You will need:</p>
-
-                    <ul>
-                        <li>Aeropress</li>
-                        <li>Scales</li>
-                        <li>Timer</li>
-                        <li>Two filter papers</li>
-                        <li>17g coffee</li>
-                        <li>250 filtered water, just off the boil</li>
-                        <li>Sturdy jug or mug</li>
-                    </ul>
-
-                    <ol>
-                        <li>Place two filter papers into cap and screw on tight.</li>
-                        <li>Rinse out with hot water and place on top of your jug.</li>
-                        <li>Grind 17g of coffee and put into the chamber.</li>
-                        <li>Pour in 250g of water and immediately start a timer.</li>
-                        <li>Stir thoroughly (we use three stirs clockwise and three anticlockwise).</li>
-                        <li>Put the plunger just inside the chamber.</li>
-                        <li>Once the timer reaches 1:30, start to push down on the plunger.</li>
-                        <li>Aim to finish plunging at 2:00.</li>
-                    </ol>
-
-                    <h4>Enjoy!</h4>
-
+                    <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
+                    <p class="ph-landing">Intro to Coffee</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p class="brewing-download">Want to download a printable pdf? Click <a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
-            </div>
-        </div>
-    </div>
+    <! --- footer --->
+
+    <footer>
+
+    </footer>
+
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
