--- a/barista-sca.html
+++ b/barista-sca.html
@@ -24,21 +24,21 @@
         <div class="collapse navbar-collapse " id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our coffees</a>
+                    <a class="nav-link" href="coffees.html">Our coffees</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="# ">Brewing guides</a>
+                    <a class="nav-link" href="brewing.html">Brewing guides</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Intro to coffee</a>
-                        <a class="dropdown-item" href="#">Barista SCA</a>
-                        <a class="dropdown-item" href="#">Brewing SCA</a>
+                        <a class="dropdown-item" href="intro.html">Intro to coffee</a>
+                        <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
+                        <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
@@ -49,50 +49,16 @@
 
 <! --- main section --->
 
-<div class="container-fluid courses-container">
+<div class="container main-container">
+<div class="container main-landing">
     <div class="row">
-        <div class="col-3">
-            <ul>
-                <li><a href="#home">Introductory</a></li>
-                <li><a href="#news">Foundation</a></li>
-                <li><a href="#contact">Advanced</a></li>
-                
-                </ul>
-        </div>
-
-        <div class="col-9">
-            <div class="card">
-
-                <! --- heading --->
-
-                <div class="card-body">
-                    <h4 class="card-title">Sun Gone</h4>
-                    <h6 class="card-subtitle text-muted">Sun disappears!</h6>
-                </div>
-
-                <! --- image --->
-
-                <img src="/pix/samples/12s.jpg" alt="Photo of sunset">
-
-                <! --- content --->
-
-                <div class="card-body">
-                    <p class="card-text">The sun disappeared behind the horizon today. Experts claim it could be gone for good!</p>
-                </div>
-            </div>
-        </div>
+      <div class="col">
+        <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
+        <p class="ph-landing">Barista SCA</p>
+      </div>
     </div>
+  </div>
 </div>
-</div>
-
-
-
-
-
-
-
-
-
 
 <! --- footer --->
 
