--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -23,21 +23,21 @@
             <div class="collapse navbar-collapse " id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our coffees</a>
+                        <a class="nav-link" href="coffees.html">Our coffees</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="# ">Brewing guides</a>
+                        <a class="nav-link" href="brewing.html">Brewing guides</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Intro to coffee</a>
-                            <a class="dropdown-item" href="#">Barista SCA</a>
-                            <a class="dropdown-item" href="#">Brewing SCA</a>
+                            <a class="dropdown-item" href="intro.html">Intro to coffee</a>
+                            <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
+                            <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
