--- a/espresso.html
+++ b/espresso.html
@@ -32,9 +32,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our courses</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Intro to coffee</a>
-                            <a class="dropdown-item" href="#">Barista SCA</a>
-                            <a class="dropdown-item" href="#">Brewing SCA</a>
+                            <a class="dropdown-item" href="intro.html">Intro to coffee</a>
+                            <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
+                            <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
                         </div>
                     </li>
                     <li class="nav-item">
