added content and styling to intro.html

--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -48,7 +48,7 @@
 
     <! --- main section --->
 
-    <div class="container blends-container">
+    <div class="container main-container">
 
         <div class="row">
             <div class="col">
