--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <div class="container">
           <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-12 d-inline-flex justify-content-center">
               <img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200></img>
             </div>
           </div>
@@ -168,13 +168,16 @@
 
       <div class="sca-text col-12">
         <h2>SCA Courses</h2>
-        <p>Lorem ipsum dolor sit amet, an his etiam torquatos.</p>
-        <p>Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur.</p>
-        <p>Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+        <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere. SCA is a controlled and certified education system with a curriculum written and updated by the
+          best coffee experts in the coffee industry.</p>
+        <p>SCA Barista Courses and Coffee Skills Program allows the coffee professionals to complete coffee/barista courses in six subject modules and three levels of certifications, amassing course credits each time a certification is successfully passed
+          that count towards the 100 points needed to gain SCA internationally recognized Coffee Diploma.</p>
+        <p>It’s your choice on the SCA coffee/barista modules you take to get you to 100 points. SCA Certification is based on both technical knowledge and practical examination.</p>
         <button type="button" class="btn btn-outline-secondary">Browse courses</button>
       </div>
     </div>
   </div>
+  <br>
 
 
 
@@ -257,21 +260,21 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://i.imgur.com/qSUjgpF.jpg" alt="Oxmantown Café Image" width="1100" height="500">
+              <img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image" width="1100" height="500">
               <div class="carousel-caption">
                 <p style="width: 100%; height: 100%; background-color: rgba(51,153,102,0.75" ;>"The feedback from our customers has been very positive about the coffee and quite often we are asked where they can get it outside of the restaurant." | Oxmantown</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://i.imgur.com/is4K5KZ.jpg" alt="BIBI's Café Image" width="1100" height="500">
+              <img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image" width="1100" height="500">
               <div class="carousel-caption">
-                <p style="width: 100%; height: 100%; background-color: rgba(153,102,102,0.75" ;>"Big Brown Bean have been there for us every step of the way with training and guidance to make sure that each cup is as good as the last." | BIBI's</p>
+                <p style="width: 100%; height: 100%; background-color: rgba(153,102,102,0.75" ;>"Coffee Project Co. have been there for us every step of the way with training and guidance to make sure that each cup is as good as the last." | BIBI's</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://i.imgur.com/USzXhdX.jpg" alt="Forest Ave. Restaurant Image" width="1100" height="500">
+              <img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image" width="1100" height="500">
               <div class="carousel-caption">
-                <p style="width: 100%; height: 100%; background-color: rgba(204,153,0,0.75)" ;>"We have been open for over a year now and have used Big Brown Bean coffee from the very start. It is, no doubt, exceptional quality coffee." | Forest Ave. Restaurant</p>
+                <p style="width: 100%; height: 100%; background-color: rgba(204,153,0,0.75)" ;>"We have been open for over a year now and have used Coffee Project Co. coffee from the very start. It is, no doubt, exceptional quality coffee." | Forest Ave. Restaurant</p>
               </div>
             </div>
           </div>
@@ -298,10 +301,10 @@
 
   <! --- enquiries form --->
 
-  <section class="container-fluid">
-    <div class="row bg-color-contact">
+  <section class="container">
+    <div class="row contact-landing">
       <div class="col">
-        <h3 class="contact-heading uppercase text-center">
+        <h3 class="contact-heading text-center">
           Espresso yourself!
         </h3>
         <h5 class="uppercase text-center">
@@ -314,7 +317,7 @@
             <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
             <div class="form-row text-center">
               <div class="col">
-                <button type="submit" class="btn btn-secondary">Send message</button>
+                <button type="submit" class="btn btn-secondary landing-btn">Send message</button>
               </div>
             </div>
           </form>
