--- a/intro.html
+++ b/intro.html
@@ -57,6 +57,61 @@
                     <p class="ph-landing">Intro to Coffee</p>
                 </div>
             </div>
+        </div><br>
+    </div>
+
+    <! --- media object --->
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+                <div class="media">
+                    <img src="./assets/images/barista-sca.png" alt="latte art image" class="align-self-center mx-3 mt-2" style="width:200px">
+                    <div class="media-body">
+                        <h4>Introduction to coffee</h4>
+                        <p>Introduction to coffee is a module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="intro-content">
+                    <h5>Overview</h5>
+                    <hr>
+                    <p>This course charts coffee’s journey from its origins in Ethiopia to the major commodity it is today, enjoyed by millions of people around the world.</p>
+                    <p>From farming the cherries through drying, roasting, brewing and finally drinking, this module looks at the processes coffee goes through.</p>
+                    <p>This course also includes “coffee cupping which allows you to taste the various flavours coffee has to offer.</p>
+                    <p>It has only one level and brings 10 points towards the Coffee Diploma.</p>
+                    <p>EUR 99 including exam, Cert Fee (EUR 60) + VAT</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col form-heading">
+                <h5 class="text-center">Sounds interesting?</h5>
+                <div class="center-form">
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary landing-btn">Send message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
         </div>
     </div>
 
