--- a/coffees-single.html
+++ b/coffees-single.html
@@ -48,7 +48,7 @@
 
     <! --- main section --->
 
-    <div class="container coffees-container">
+    <div class="container main-container">
 
         <div class="row">
             <div class="col">
