fixed footer links and some more styling on aeropress.html

--- a/aeropress.html
+++ b/aeropress.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col">
                     <h2>The Aeropress</h2>
-                    <hr>
+                    <hr class="section-divider">
                     <p>It is a great method for brewing a single cup at home - quick, clean and easy. However, in our opinion, the instructions that Aeropress provide themselves are not the best way to use this brewer!</p>
                     <p>Here’s the method we use ourselves:</p>
                     <p>You will need:</p>
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-
+    <hr class="section-divider">
     <div class="container">
         <div class="row">
             <div class="col">
