--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="jumbotron jumbotron-container">
             <h1 class="display-4">Welcome</h1>
             <p class="lead">We bring you sustainable, organic, fair trade coffee from the best farmers in the world</p>
-            <hr class="my-4 jumbotron-divider">
+            <hr class="section-divider">
             <p>We now supplement barista courses with SCA Coffee Skills modules<span>&nbsp</span><a href="#" class="badge badge-light">New</a></p>
           </div>
         </div>
@@ -336,30 +336,30 @@
             <div class="col-6 media d-inline-flex justify-content-center">
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="#" target="_blank">
+                  <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" target="_blank">
+                  <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" target="_blank">
+                  <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" target="_blank">
+                  <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" target="_blank">
+                  <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
 </a>
@@ -368,7 +368,7 @@
               </ul>
             </div>
             <div class="col-6 my-info d-inline-flex justify-content-center">
-              <p>Designed by roxheff <a href="https://github.com/roxanahefferon"><i class="fab fa-github-square"></i></p></a>
+              <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
             </div>
           </div>
         </div>
